--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,14 +1,3 @@
-.pageWrapper {
-  min-height: 100vh;
-  position: relative;
-  overflow-x: hidden;
-  background: #fdfdfd;
-  background-image: linear-gradient(rgba(253, 253, 253, 0.4), rgba(253, 253, 253, 0.4)), url('../assets/college-bg.jpg');
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-}
-
 /* Background Glows */
 .bgGlow1 {
   position: absolute;
